Fix messages on small screens

--- a/style/style.css
+++ b/style/style.css
@@ -158,11 +158,11 @@ button:hover{
         margin-top: 10px;
         font-size: 10px;
     }
-    .winningMessageMessage{
+    .winningMessage{
         margin-top: 10px;
         font-size: 10px;
     }
-    .tiedMessageMessage{
+    .tiedMessage{
         margin-top: 10px;
         font-size: 10px;
     }
